--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/no-unescaped-entities": ["error", {"forbid": [{
+      "char": "&apos;",
+      "alternatives": ["&apos;", "&lsquo;", "&#39;", "&rsquo;"]
+      }]
+    }]
+  }
+  
 }
