--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "firebase": "^9.9.2",
     "next": "12.1.6",
     "react": "18.2.0",
