--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.9.2",
     "next": "12.1.6",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.0",
