--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.9.2",
+    "googleapis": "^105.0.0",
     "next": "12.1.6",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
